chore: minor tweaks

--- a/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
+++ b/template_content/{% if ide_vscode %}.vscode{% endif %}/tasks.json
@@ -2,7 +2,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Build Beaker application",
+      "label": "Build contracts",
       "command": "${workspaceFolder}/.venv/bin/python",
       "windows": {
         "command": "${workspaceFolder}/.venv/Scripts/python.exe"
@@ -18,7 +18,7 @@
       "problemMatcher": []
     },
     {
-      "label": "Build Beaker application (+ LocalNet)",
+      "label": "Build contracts (+ LocalNet)",
       "command": "${workspaceFolder}/.venv/bin/python",
       "windows": {
         "command": "${workspaceFolder}/.venv/Scripts/python.exe"
