chore: minor tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,10 @@ cython_debug/
 # NPM
 node_modules
 
+# Ignore lockfiles in all directories and subdirectories under examples, recursively
+examples/**/package-lock.json
+examples/**/poetry.lock
+
 # playground folder for previewing templates
 .playground/*
 !.playground/.gitkeep
