chore: patching ci

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ select = [
   "I",
 ]
 extend-exclude = [
-  "tests_generated/*", # Ignoring generated tests, ruff specific errors are to be caught by pytest
+  "examples/*",       # Ignoring generated tests, ruff specific errors are to be caught by pytest
   "template_content",
   ".git",
   ".mypy_cache",
