chore: refining tests

--- a/examples/production_beaker/.github/workflows/checks.yaml
+++ b/examples/production_beaker/.github/workflows/checks.yaml
@@ -61,6 +61,12 @@ jobs:
       - name: Check types with mypy
         run: poetry run mypy
 
+      - name: Run tests
+        shell: bash
+        run: |
+          set -o pipefail
+          poetry run pytest --junitxml=pytest-junit.xml
+
       - name: Scan TEAL files for issues
         run: algokit task analyze .algokit --recursive --force # add --diff flag if you want output stability checks instead
 
