--- a/examples/generators/production_beaker_smart_contract_python/.algokit.toml
+++ b/examples/generators/production_beaker_smart_contract_python/.algokit.toml
@@ -14,3 +14,7 @@ environment_secrets = []
 [generate.smart_contract]
 description = "Adds new smart contract to existing project"
 path = ".algokit/generators/create_contract"
+
+[project]
+type = 'contract'
+name = 'production_beaker_smart_contract_python'
