--- a/examples/generators/starter_beaker_smart_contract_python/.algokit.toml
+++ b/examples/generators/starter_beaker_smart_contract_python/.algokit.toml
@@ -13,3 +13,7 @@ environment_secrets = []
 [generate.smart_contract]
 description = "Adds new smart contract to existing project"
 path = ".algokit/generators/create_contract"
+
+[project]
+type = 'contract'
+name = 'starter_beaker_smart_contract_python'
