--- a/.github/workflows/check-python.yaml
+++ b/.github/workflows/check-python.yaml
@@ -14,7 +14,7 @@ jobs:
         run: pipx install poetry
 
       - name: Install algokit
-        run: pipx install git+https://github.com/algorandfoundation/algokit-cli@feat/init_wizard_v2 --force
+        run: pipx install algokit 
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
