--- a/examples/generators/production_beaker_smart_contract_typescript/.github/workflows/production-beaker-smart-contract-typescript-cd.yaml
+++ b/examples/generators/production_beaker_smart_contract_typescript/.github/workflows/production-beaker-smart-contract-typescript-cd.yaml
@@ -1,21 +1,19 @@
-name: Continuous Delivery of Smart Contract
+name: Release production_beaker_smart_contract_typescript
 
 on:
+  workflow_call:
   push:
     branches:
       - main
 
-concurrency: release
-
 jobs:
-  ci-check:
-    name: Perform Checks
-    uses: ./.github/workflows/checks.yaml
-
+  validate:
+    name: Validate production_beaker_smart_contract_typescript
+    uses: ./.github/workflows/production-beaker-smart-contract-typescript-ci.yaml
   deploy-testnet:
-    runs-on: 'ubuntu-latest'
-    needs: ci-check
-    environment: Test
+    runs-on: "ubuntu-latest"
+    needs: validate
+    environment: contract-testnet
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -26,14 +24,14 @@ jobs:
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
-          cache: 'poetry'
+          python-version: "3.12"
+          cache: "poetry"
 
       - name: Install algokit
-        run: pipx install algokit
+        run: pipx install git+https://github.com/algorandfoundation/algokit-cli@feat/orchestration-linking
 
       - name: Bootstrap dependencies
-        run: algokit bootstrap all
+        run: algokit bootstrap all --project-name 'production_beaker_smart_contract_typescript'
 
       - name: Configure git
         shell: bash
@@ -42,7 +40,7 @@ jobs:
           git config --global user.email "actions@github.com" && git config --global user.name "github-actions"
 
       - name: Deploy to testnet
-        run: algokit deploy testnet
+        run: algokit deploy testnet --project-name 'production_beaker_smart_contract_typescript'
         env:
           # This is the account that becomes the creator of the contract
           DEPLOYER_MNEMONIC: ${{ secrets.DEPLOYER_MNEMONIC }}
