chore: fix up the ts deployer build command

--- a/examples/generators/starter_beaker_smart_contract_typescript/.algokit.toml
+++ b/examples/generators/starter_beaker_smart_contract_typescript/.algokit.toml
@@ -21,8 +21,8 @@ environment_secrets = []
 
 [project.run]
 # Commands intented for use locally and in CI
-build = { commands = [ 
-  'npm run build',
+build = { commands = [
+  'poetry run python -m smart_contracts build',
 ], description = 'Build all smart contracts in the project' }
 lint = { commands = [
 ], description = 'Perform linting' }
