chore: minor tweaks

--- a/.github/workflows/check-python.yaml
+++ b/.github/workflows/check-python.yaml
@@ -18,7 +18,7 @@ jobs:
         run: pipx install git+https://github.com/algorandfoundation/algokit-cli@v2
 
       - name: Run algokit localnet
-        run: algokit localnet reset
+        run: algokit localnet start
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
