chore: bumping min version
BREAKING CHANGE: Support for algokit-cli v2.0

--- a/examples/generators/production_beaker_smart_contract_python/.github/workflows/production-beaker-smart-contract-python-cd.yaml
+++ b/examples/generators/production_beaker_smart_contract_python/.github/workflows/production-beaker-smart-contract-python-cd.yaml
@@ -28,7 +28,7 @@ jobs:
           cache: "poetry"
 
       - name: Install algokit
-        run: pipx install git+https://github.com/algorandfoundation/algokit-cli@feat/command_orchestration
+        run: pipx install algokit
 
       - name: Bootstrap dependencies
         run: algokit bootstrap all --project-name 'production_beaker_smart_contract_python'
