--- a/examples/generators/production_beaker_smart_contract_typescript/.github/workflows/production-beaker-smart-contract-typescript-ci.yaml
+++ b/examples/generators/production_beaker_smart_contract_typescript/.github/workflows/production-beaker-smart-contract-typescript-ci.yaml
@@ -21,7 +21,7 @@ jobs:
           cache: "poetry"
 
       - name: Install algokit
-        run: pipx install git+https://github.com/algorandfoundation/algokit-cli@feat/command_orchestration
+        run: pipx install algokit
 
       - name: Start LocalNet
         run: algokit localnet start
