feat: orchestration support (#61)
* feat: orchestration support

* chore: swapping to final prerelease branch

* chore: fix up the ts deployer build command

* chore: fixing race condition in tests (xdist); more robust tests

* chore: minor tweaks

* chore: minor tweaks

* chore: regen artifacts

* chore: bumping min version

BREAKING CHANGE: Support for algokit-cli v2.0

---------

Co-authored-by: Neil Campbell <neil.campbell@makerx.com.au>

--- a/.github/workflows/check-python.yaml
+++ b/.github/workflows/check-python.yaml
@@ -14,7 +14,10 @@ jobs:
         run: pipx install poetry
 
       - name: Install algokit
-        run: pipx install algokit 
+        run: pipx install algokit
+
+      - name: Run algokit localnet
+        run: algokit localnet start
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
