--- a/examples/generators/starter_beaker_smart_contract_python/.algokit.toml
+++ b/examples/generators/starter_beaker_smart_contract_python/.algokit.toml
@@ -1,14 +1,5 @@
 [algokit]
-min_version = "v1.10.0"
-
-[deploy]
-command = "poetry run python -m smart_contracts deploy"
-environment_secrets = [
-  "DEPLOYER_MNEMONIC",
-]
-
-[deploy.localnet]
-environment_secrets = []
+min_version = "v2.0.0"
 
 [generate.smart_contract]
 description = "Adds new smart contract to existing project"
@@ -17,3 +8,31 @@ path = ".algokit/generators/create_contract"
 [project]
 type = 'contract'
 name = 'starter_beaker_smart_contract_python'
+artifacts = 'smart_contracts/artifacts'
+
+[project.deploy]
+command = "poetry run python -m smart_contracts deploy"
+environment_secrets = [
+  "DEPLOYER_MNEMONIC",
+]
+
+[project.deploy.localnet]
+environment_secrets = []
+
+[project.run]
+# Commands intented for use locally and in CI
+build = { commands = [
+  'poetry run python -m smart_contracts build',
+], description = 'Build all smart contracts in the project' }
+lint = { commands = [
+], description = 'Perform linting' }
+audit-teal = { commands = [
+  # 🚨 IMPORTANT 🚨: For strict TEAL validation, remove --exclude statements. The default starter contract is not for production. Ensure thorough testing and adherence to best practices in smart contract development. This is not a replacement for a professional audit.
+  'algokit task analyze smart_contracts/artifacts --recursive --force --exclude rekey-to --exclude is-updatable --exclude missing-fee-check --exclude is-deletable --exclude can-close-asset --exclude can-close-account --exclude unprotected-deletable --exclude unprotected-updatable',
+], description = 'Audit TEAL files' }
+
+# Commands indented for CI only, prefixed with `ci-` by convention
+ci-teal-diff = { commands = [
+  'git add -N ./smart_contracts/artifacts',
+  'git diff --exit-code --minimal ./smart_contracts/artifacts',
+], description = 'Check TEAL files for differences' }
