chore: addressing pr comments

--- a/examples/generators/production_beaker_smart_contract_python/.github/workflows/production-beaker-smart-contract-python-cd.yaml
+++ b/examples/generators/production_beaker_smart_contract_python/.github/workflows/production-beaker-smart-contract-python-cd.yaml
@@ -31,7 +31,7 @@ jobs:
         run: pipx install algokit
 
       - name: Bootstrap dependencies
-        run: algokit bootstrap all --project-name 'production_beaker_smart_contract_python'
+        run: algokit project bootstrap all --project-name 'production_beaker_smart_contract_python'
 
       - name: Configure git
         shell: bash
