--- a/examples/generators/production_beaker_smart_contract_typescript/.github/workflows/production-beaker-smart-contract-typescript-ci.yaml
+++ b/examples/generators/production_beaker_smart_contract_typescript/.github/workflows/production-beaker-smart-contract-typescript-ci.yaml
@@ -27,7 +27,7 @@ jobs:
         run: algokit localnet start
 
       - name: Bootstrap dependencies
-        run: algokit bootstrap all --project-name 'production_beaker_smart_contract_typescript'
+        run: algokit project bootstrap all --project-name 'production_beaker_smart_contract_typescript'
 
       - name: Configure git
         shell: bash
