--- a/examples/production_beaker/.github/workflows/production-beaker-cd.yaml
+++ b/examples/production_beaker/.github/workflows/production-beaker-cd.yaml
@@ -31,7 +31,7 @@ jobs:
         run: pipx install algokit
 
       - name: Bootstrap dependencies
-        run: algokit bootstrap all --project-name 'production_beaker'
+        run: algokit project bootstrap all --project-name 'production_beaker'
 
       - name: Configure git
         shell: bash
