--- a/examples/production_beaker/.github/workflows/production-beaker-ci.yaml
+++ b/examples/production_beaker/.github/workflows/production-beaker-ci.yaml
@@ -27,7 +27,7 @@ jobs:
         run: algokit localnet start
 
       - name: Bootstrap dependencies
-        run: algokit bootstrap all --project-name 'production_beaker'
+        run: algokit project bootstrap all --project-name 'production_beaker'
 
       - name: Configure git
         shell: bash
