--- a/copier.yaml
+++ b/copier.yaml
@@ -58,6 +58,12 @@ ide_vscode:
   when: "{{ preset_name == 'custom' }}"
   default: yes
 
+code_tours:
+  type: bool
+  help: Do you want to add interactive VSCode CodeTour walkthrough?
+  when: "{{ preset_name == 'custom' }}"
+  default: "{{ 'yes' if ide_vscode == yes else 'no' }}"
+
 ide_jetbrains:
   type: bool
   help: Do you want to add JetBrains configuration (primarily optimized for PyCharm CE)?
