--- a/examples/production_beaker/.pre-commit-config.yaml
+++ b/examples/production_beaker/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
         description: "Run AlgoKit `Tealer` for TEAL static analysis"
         entry: algokit
         language: system
-        args: [task, analyze, ".algokit", "--recursive", "--force"]
+        args: [project, run, "audit-teal"]
         require_serial: false
         additional_dependencies: []
         minimum_pre_commit_version: "0"
